<resources>
    <string name="app_name">MonthlyBudget</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prompt_month">Month</string>
    <string name="prompt_year">Year</string>
    <string name="prompt_add_new_month">Add New Month</string>
    <string name="prompt_add_month">Add Month</string>
    <string name="spinner_error_no_selection">Please Select Month</string>
    <string name="prompt_current_month_year">Current Month and Year</string>
    <string name="error_invalid_year">Invalid Year, Enter Year between Current to within Next 10 Years</string>
    <string name="propmt_entry_exists_in_db">Database already has this Entry.</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_amount">Amount</string>
    <string name="sqlite_date_format">DD-MMM-YYYY</string>
    <string name="rv_lable_time">Time</string>
    <string name="time_format">hh:mm:ss</string>
    <string name="prompt_type">Type</string>
    <string name="prompt_expense_or_income">Expense/Income</string>
    <string name="error_empty_database">Database is Empty.</string>
    <string name="prompt_date_of_entry">Date of Entry:</string>
    <string name="error_prompt_required">Required</string>
    <string name="add_income_btn_text">Add Income</string>
    <string name="add_expense_btn_text">Add Expense</string>
    <string name="prompt_successfully_added">Record Successfully Saved</string>
    <string name="action_summary">Budget Summary</string>
    <string name="prompt_total_income">Total Income :</string>
    <string name="prompt_total_expense">Total Expense :</string>
    <string name="prompt_total_saving">Total Saving :</string>
    <string name="prompt_budget_summary">Budget Summary of the Month</string>
    <string name="prompt_total_over_expense">Total Over Expenses :</string>
    <string name="prompt_amount_too_big">Max Amount input limit is 1cr.</string>
    <string name="prompt_big_amount_insertion_suggestion">Tip: Please divide the Amount and insert in Multiple Entries.</string>
    <string name="error_prompt_title_too_long">Too Long. (Max 35 Characters)</string>

    <string-array name="month_array">
        <item>Tap To Select</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="budget_operation_type_array">
        <item>Expense</item>
        <item>Income</item>
    </string-array>
</resources>
