<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_month_budget_summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mindfiresolutions.monthlybudget.MainActivities.MonthBudgetSummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/HeaderFields"
            android:gravity="start"
            android:textColor="@color/txt_blue"
            android:text="@string/prompt_total_income"/>
        <TextView
            style="@style/HeaderFields"
            android:id="@+id/monthly_budget_txt_tot_income"
            android:textColor="@color/txt_blue"
            android:hint="@string/prompt_amount"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/HeaderFields"
            android:gravity="start"
            android:textColor="@color/txt_red"
            android:text="@string/prompt_total_expense"/>
        <TextView
            style="@style/HeaderFields"
            android:id="@+id/monthly_budget_txt_tot_expense"
            android:textColor="@color/txt_red"
            android:hint="@string/prompt_amount"/>
    </LinearLayout>    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        style="@style/HeaderFields"
        android:gravity="start"
        android:id="@+id/monthly_budget_txt_lable_tot_saving"
        android:textColor="@color/txt_green"
        android:text="@string/prompt_total_saving"/>
    <TextView
        style="@style/HeaderFields"
        android:id="@+id/monthly_budget_txt_tot_saving"
        android:textColor="@color/txt_green"
        android:hint="@string/prompt_amount"/>
</LinearLayout>
    <com.github.mikephil.charting.charts.PieChart
        android:layout_width="match_parent"
        android:id="@+id/monthly_budget_piechart_budget_summary"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
</LinearLayout>
