<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    card_view:cardCornerRadius="@dimen/cradview_corner_radius"
    android:layout_margin="@dimen/cardview_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cardview_background">


        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/styled_black_layout">
                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/prompt_date_of_entry"
                    android:textColor="@color/colorWhite"
                    android:padding="@dimen/textfields_padding"
                    android:textSize="@dimen/content_textsize"/>
            <TextView
                android:id="@+id/rv_item_budget_opr_txt_date"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/sqlite_date_format"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/textfields_padding"
                android:textSize="@dimen/content_textsize" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_textsize"
                        android:gravity="center"
                        android:textColor="@color/txt_red"
                        android:text="@string/rv_lable_time"
                        android:padding="@dimen/textfields_padding" />

                    <TextView
                        android:id="@+id/rv_item_budget_opr_txt_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/time_format"
                        android:padding="@dimen/textfields_padding"
                        android:textColor="@color/txt_red" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_textsize"
                        android:gravity="center"
                        android:text="@string/prompt_type"
                        android:textColor="@color/txt_blue"
                        android:padding="@dimen/textfields_padding" />

                    <TextView
                        android:id="@+id/rv_item_budget_opr_txt_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/prompt_expense_or_income"
                        android:padding="@dimen/textfields_padding"
                        android:textColor="@color/txt_blue" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_textsize"
                        android:gravity="center"
                        android:text="@string/prompt_title"
                        android:textColor="@color/txt_green"
                        android:padding="@dimen/textfields_padding" />

                    <TextView
                        android:id="@+id/rv_item_budget_opr_txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/prompt_title"
                        android:padding="@dimen/textfields_padding"
                        android:textColor="@color/txt_green" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_textsize"
                        android:gravity="center"
                        android:text="@string/prompt_amount"
                        android:padding="@dimen/textfields_padding"
                        android:textColor="@color/cardview_background_orange"/>

                    <TextView
                        android:id="@+id/rv_item_budget_opr_txt_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/prompt_amount"
                        android:padding="@dimen/textfields_padding"
                        android:textColor="@color/cardview_background_orange" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>