<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_radius"
        android:background="@color/cardview_background_purple"
        android:gravity="center"
        android:padding="@dimen/cardview_margin"
        android:text="@string/prompt_add_new_month"
        android:textColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <Spinner
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/spnr_alert_add_new_month"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:entries="@array/month_array"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edt_year_alert_add_new_month"
                android:hint="@string/prompt_year"
                android:gravity="center"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_alert_add_new_month"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/prompt_add_month"/>
</LinearLayout>